<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:paddingTop="200dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compunding_n_is_key_n_to_the_n_success"
        android:textSize="55sp" />

    <ImageButton
        android:id="@+id/button"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="180dp"
        android:layout_gravity="end"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/nil">

    </ImageButton>

    <TextView
        android:layout_marginEnd="55dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_go"
        android:layout_gravity="end"
        android:textStyle="bold|italic"
        android:textSize="18sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:text="@string/developed_by_pradumna_saraf"></TextView>
</LinearLayout>